fix breakpt gap

--- a/packages/openneuro-app/src/sass/crn_app/_common.variables.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_common.variables.scss
@@ -1,7 +1,7 @@
 // Custom SCSS Variables + Mixins ========================
 // * Variables *
 $mobile-breakpoint: 765px;
-$tablet-breakpoint: 1100px;
+$tablet-breakpoint: 1120px;
 // * Mixins *
 @mixin mobile {
     @media (max-width: #{$mobile-breakpoint}) {
